[gd_scene load_steps=3 format=2]

[ext_resource path="res://_scripts/sound_control.gd" type="Script" id=1]
[ext_resource path="res://_resources/_audio/sound_effects/poc_attack.wav" type="AudioStream" id=2]

[node name="sound_control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="music_player1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="music_player2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="music_player3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="sfx_player1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="sfx_player2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="sfx_player3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="sfx_player4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="sfx_player5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="sfx_player6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="sfx_player7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="sfx_player8" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="sfx_player9" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="sfx_player10" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="fadeout_tween" type="Tween" parent="."]
